💄(projects) prevent 'more' button from jumping around

--- a/static/index.css
+++ b/static/index.css
@@ -366,9 +366,9 @@ article {
 .project-content-wrapper {
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
     position: relative;
     gap: 1rem;
+    height: 100%;
 }
 
 .project-content {
@@ -384,6 +384,12 @@ article {
     overflow: hidden;
     position: relative;
     z-index: 1;
+    cursor: pointer;
+}
+
+.project-aside {
+    display: flex;
+    align-items: flex-start;
 }
 
 .project-next-bg {
